Do not track generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 data
 results
 ._*
+Genome
+GenomeIndex
+GenomeIndexHash
+OverflowTable
+*.fa
+*.fasta
+*.fa.*
+*.gz
+*.gz.ok
+*.gz.md5
+*.db
+*.dmp
+nr
+nt
+nt.*
+*_db
+*_db.info
