--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,6 @@
 [submodule "pipeline/005-merge-sort-sams"]
 	path = pipeline/005-merge-sort-sams
 	url = https://github.com/xihh87/mk-merge-sams.git
+[submodule "pipeline/007-surpi-annotate"]
+	path = pipeline/007-surpi-annotate
+	url = https://github.com/xihh87/mk-surpi-annotate.git
